k8s/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syllabus-scanner-db
  labels:
    app: syllabus-scanner-db
spec:
  selector:
    matchLabels:
      app: syllabus-scanner-db
  replicas: 1
  template:
    metadata:
      labels:
        app: syllabus-scanner-db
    spec:
      containers:
        - image: docker.io/postgres:latest
          name: syllabus-scanner-db
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: syllabus-scanner-db
spec:
  selector:
    app: syllabus-scanner-db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syllabus-scanner-backend
  labels:
    app: syllabus-scanner-backend
spec:
  selector:
    matchLabels:
      app: syllabus-scanner-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: syllabus-scanner-backend
    spec:
      containers:
        - image: syllabus-scanner-backend:release
          imagePullPolicy: Never
          name: syllabus-scanner-backend
          workingDir: /backend
          command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: syllabus-scanner-backend
spec:
  type: LoadBalancer
  selector:
    app: syllabus-scanner-backend
  ports:
    - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syllabus-scanner-backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: syllabus-scanner-backend
                port:
                  number: 8000
